# FFCA

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
agent/: AUDIT_2026_05_20.md  README.md  pyproject.toml
agent/case_studies/: README.md  compare_counterfactual_results.py  compare_feature_perturbation_results.py  compound_flooding_extra_validation.py  diff_v05_v06.py  experiment_utils.py  flooding_figures.py  flooding_figures_all.py  llm_judge_determinism.py  narrate_flooding.py  narrate_flooding_all.py  narrate_flooding_corrected.py  narrate_v05.py  narrate_v06.py  negative_control.py  per_seed_analysis.json  per_seed_analysis.py  per_seed_drop_lists.json  per_seed_drop_lists.py  reeval_v05.py  requirements.txt  run_all.py  run_ffca_counterfactual.py  run_ffca_ensemble_phaseB.py  run_ffca_ensemble_phaseB_full.py  section_D_nonlinear_driver_topup.py  section_F3.csv  section_F3_pdp_residual.py  section_F3_summary.json  section_F_within_impact_band.py  section_G_within_impact_band.py  section_H_per_sample_interaction.csv  section_H_per_sample_interaction.py  section_H_per_sample_interaction_summary.json  section_H_tail_reanalysis.py  section_H_tail_summary.json  section_H_tail_super_add.csv  section_N_ice_heterogeneity.csv  section_N_ice_heterogeneity_summary.json  section_VN_purpose_tests.py  (+4 more)
agent/docs/: COMPOUND_FLOODING_CASE_STUDY.md  NEGATIVE_CONTROL.md  PITFALLS.md  SENSITIVITY.md  V06_NARRATIONS_NOTES.md  VALIDATION_GATE_v0.4.md  VALIDATION_GATE_v0.5.md
agent/ffca_agent/: __init__.py  archetypes.py  case_meta.py  cli.py  evaluator.py  llm.py  report.py  signature_summary.py  timeseries.py  training.py  vision.py
agent/rulebook/: ffca_rules.yaml  schema.json  validate.py
agent/tests/: test_audit_regression_2026_05_20.py  test_case_meta.py  test_evaluator.py  test_llm.py  test_rulebook.py  test_signature_summary.py  test_timeseries.py  test_training.py  test_vision.py
docs/: PACKAGE_DESIGN_V0_1.md  adapters.md  quickstart.md
examples/: 01_tabular_breast_cancer.py  02_image_cifar10_pixel.py  03_image_cifar10_channel.py
experiments/breast_cancer/: ablation_results.json  breast_cancer_ffca_report.md  feature_ranking.json
experiments/cifar10/: cifar10_results.json  cifar10_results_v2.json
experiments/climate_phase2/: srdrn_phase2_audit_v2.json
experiments/ex01_breast_cancer/: report.json  report.md
experiments/waterbirds/: waterbirds_v2.json
ffca/: __init__.py  checkpoint.py  cli.py  diagnostics.py  report.py
reports/: AUDIT_V2_REPORT.md  FINAL_REPORT.md  VALIDATION_REPORT.md  proposal_001_cauchy_hvp_interaction.md  proposal_005_trust_score.md  proposal_006_co_sensitivity_groups.md
tests/: ffca_improvements.py  test_audit_regression_2026_05_20.py  test_biased_cifar10.py  test_biased_cifar10_v2.py  test_breast_cancer.py  test_cauchy_hvp_validation.py  test_package_smoke.py  test_srdrn_phase2.py  test_waterbirds.py  test_waterbirds_v2.py
validation_runs/: run_01_tabular.py  run_02_cnn.py  summarize_validation.py
(+61 files in other folders)
